fix: Unexpected duplicate text-align

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -55,7 +55,6 @@ body{
 }
 
 .character-card__header{
-    text-align: center;
     background-image: url("../assets/imgs/character-card-bg.webp");
     background-size: cover;
     text-align: center;
